fixed alignment in nav bar

--- a/css/shared.css
+++ b/css/shared.css
@@ -65,6 +65,11 @@
     font-family: fontello;
     font-size: 2em;
   }
+  #mobile-nav ul {
+    display: none;
+    width: 100%;
+    text-align: center;
+  }
   #mobile-nav li {
     position: relative;
     display: inline-block;   
@@ -76,7 +81,7 @@
     color: #FFFFFF;
     position: relative;
     background-color: #F26364;
-    padding: 1em;
+    padding: 1em 0;
     text-align: center;
     font-family: 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
     font-weight: bold;
